# LearnOpenCV

./: .gitignore  LICENSE  README.md
chapter1/: README.MD
chapter1/cpp/: CMakeLists.txt  test1.cpp
chapter1/python/: test1.py  test2.py
